Fixed: Missing background color for navigation (in case of small size).

--- a/src/style.css
+++ b/src/style.css
@@ -267,8 +267,9 @@ a:hover,
 .menu,
 .close,
 .nav-small {
-  display: none;
+  background-color: var(--clr-primary-500);
   color: var(--clr-neutral-100);
+  display: none;
 }
 
 .nav-small {
